--- a/assets/style.css
+++ b/assets/style.css
@@ -18,24 +18,26 @@ body{
   header {
     background-color: var(--menu);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 100%;
   }
-  
+
   .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
   }
   
   .logo {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: bold;
     color: var(--yellow-sun);
   }
   
   .menu-toggle {
     display: none;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     background: none;
     border: none;
     cursor: pointer;
@@ -44,7 +46,7 @@ body{
   .nav-links {
     list-style: none;
     display: flex;
-    gap: 1.5rem;
+    gap: 1.2rem;
     margin: 0;
     padding: 0;
   }
@@ -60,6 +62,69 @@ body{
     color: var(--yellow-sun);
   }
   
+  .init-apresetetion{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 30px;
+    height: 100vh;
+  }
+  .init-box-firts{
+    padding: 10px;
+    height: 240px;
+    width: 496px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  .init-title{
+    font-size: 2rem;
+  }
+  .init-paragraf{
+    font-size: 1rem;
+  }
+  .init-button{
+    border: none;
+    padding: 10px;
+    background-color: var(--text);
+    border-radius: 10px;
+    width: 30%;
+    transition: ease 0.5s;
+  }
+  .init-button:hover{
+    background-color: var(--menu);
+    cursor: pointer;
+  
+  }
+  .init-img{
+  width: 600px;
+  }
+
+  .about-apresetetion{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 30px;
+    height: 100vh;
+  }
+  .about-box{
+    height: 60%;
+  }
+  .about-title{
+    font-size: 2rem;
+  }
+  .box-about-paragraf{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 80%;
+  }
+  .about-img{
+  width: 650px;
+  }
 
   @media (max-width: 768px) {
     .menu-toggle {
