Feat:  Implement connection backend

--- a/assets/style/cronograma.css
+++ b/assets/style/cronograma.css
@@ -7,17 +7,81 @@
   }
   
   body {
-    background-color: var(--background);
+    background-color: var(--background);  
     height: 100vh;
+    width: 100%;  
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
+    align-items: center;
   }
   
   html {
     scroll-behavior: smooth;
   }
+
+  header {
+    background-color: var(--menu);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 100%;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
+  
+  }
+  
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1rem;
+  }
+  
+  .logo {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: var(--yellow-sun);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  .text-logo {
+    color: var(--background);
+  }
+  
+  .menu-toggle {
+    display: none;
+    font-size: 1.2rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: var(--card);
+  }
+  
+  .nav-links {
+    list-style: none;
+    display: flex;
+    gap: 1.2rem;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .nav-links li a {
+    text-decoration: none;
+    color: var(--paragraf);
+    font-weight: 500;
+    transition: color 0.3s ease;
+  }
+  
+  .nav-links li a:hover {
+    color: var(--button-hover);
+  }
+  
+  .logo-site {
+    width: 100px;
+    border-radius: 50%;
+  }
+  
   
   :root {
     --blue-river: #00fb82;
@@ -32,9 +96,7 @@
     --input: #212221;
     
   }
-  .logo{
-    width: 250px;
-  }
+  
   .forms{
     background-color: var(--card);
     display: flex;
@@ -45,6 +107,7 @@
     padding: 10px;
     border-radius: 10px;
     gap: 20px;
+    
   }
   .input-box{
     width:45%;
@@ -88,11 +151,19 @@
 
   .box-forms{
     display: flex;
-    height: 60%;
+    height: 100%;
     width: 95%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 6%;
+    padding: 5px;
+  }
+  .text-title{
+    font-size: 1.4rem;
+    border-left: 1px solid white;
+    padding: 10px;
+    text-transform: uppercase;
   }
 
   #eventosSelecionados{
@@ -295,4 +366,13 @@
 
 .remove-button:hover {
     background-color: #b02a37; /* Vermelho escuro */
+}
+
+.footer{
+   width: 50%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 15px;
+   flex-direction: column;
 }
