--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -33,6 +33,7 @@ header {
   position: fixed;
   width: 100%;
   box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
+  z-index: 10;
 
 }
 
@@ -213,8 +214,14 @@ header {
   border-bottom: 1px solid white;
   box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
+  transition: transform 0.6s ease-out, box-shadow 0.8s ease, font-size 0.8s ease;
+  gap: 2px;
 }
-
+.extecion-second-box:hover{
+  transform: scale(1.1);
+  box-shadow: 8px 8px 10px 8px rgba(0, 0, 0, 0.4);
+  background-color: var(--card);
+}
 .extecion-second-box h4 {
   font-size: 1.3rem;
   color: var(--text-title);
@@ -226,9 +233,16 @@ header {
   text-align: center;
   color: var(--paragraf);
 }
+.extecion-second-box:hover h4 {
+  color: var(--background); 
+}
+
+.extecion-second-box:hover p {
+  color: var(--background); 
+}
 
 .img-event {
-  width: 120px;
+  width: 140px;
   border-radius: 20px;
 }
 
