--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -214,8 +214,7 @@ header {
   border-bottom: 1px solid white;
   box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-  transition: transform 0.6s ease-out, box-shadow 0.8s ease, font-size 0.8s ease;
-  gap: 2px;
+  transition: transform 0.6s ease, box-shadow 0.8s ease, font-size 0.8s ease;
 }
 .extecion-second-box:hover{
   transform: scale(1.1);
