--- a/assets/style/evento.css
+++ b/assets/style/evento.css
@@ -276,7 +276,7 @@
     background-color: #dc3545; 
 }
 
-/* Alerta de informação */
+
 .alert-info {
     background-color: #17a2b8; 
 }
@@ -383,6 +383,117 @@
       border-left: 1px solid white;
       padding: 10px;
       text-transform: uppercase;
+    }
+ 
+}
+@media (max-width: 1024px){
+  .menu-toggle {
+    display: block;
+  }
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 3.5rem;
+    right: 0;
+    height: 100vh;
+    background-color: var(--background);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 0.5rem;
+    padding: 1rem;
+    width: 100%;
+    gap: 1rem;
+    z-index: 10;
+  }
+
+  .nav-links.active {
+    display: flex;
+  }
+ 
+    .forms{
+        background-color: var(--card);
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: space-around;
+        height: 100%;
+        padding: 10px;
+        border-radius: 10px;
+        gap: 20px;
+        flex-direction: column;
+      }
+      .input-box{
+        width:100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding: 15px;
+        gap: 5px;
+      }
+      .input-box div{
+        width: 100%;
+      }
+      .input-enter{
+        background-color: var(--input);
+        border: none;
+        height: 35px;
+        width:100%;
+        border-radius: 10px;
+        outline: none;
+        padding: 5px;
+      }
+      .options{
+        height: 100%;
+        display: flex;
+        align-items: start;
+        gap: 10px;
+        padding: 5px;
+        flex-direction: column;
+      }
+
+      .buttons-register{
+        border: none;
+        padding: 10px;
+        background-color: var(--paragraf);
+        color: var(--text-dark);
+        border-radius: 10px;
+        width: 40%;
+        transition: ease 0.5s;
+        margin-top: 10px;
+      }
+      
+      .buttons-register:hover{
+        background-color: var(--button-hover);
+        cursor: pointer;
+      }
+      .select-menu-box{
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: var(--input);
+        border-radius: 10px;
+        padding: 0px;
+      }
+      
+    .select-menu{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    }
+    .text-title{
+      font-size: 1rem;
+      border-left: 1px solid white;
+      padding: 10px;
+      text-transform: uppercase;
+    }
+    .select{
+      width: 50%;
+    }
+    .buttons-register{
+      width: 50%;
     }
  
 }
